maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:4: error: '=' expected but ';' found.
		var x == random3();
                                  ^