maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
	while (!estSurBiscuit) {
		var x == random3();
		}
		if (x==0) {
		gauche();
		}
		if (x==1) {
		droite;
		}
		if (x==2 && !estFaceMur) {
		avance();
	}
	if (estSurBiscuit) {
		prendBiscuit;
	}	
}
